[gd_scene load_steps=6 format=3 uid="uid://bqpfis0j4dkup"]

[ext_resource type="Script" path="res://Cenas/pausar.gd" id="1_o278h"]
[ext_resource type="Texture2D" uid="uid://6eoqw8moxwrn" path="res://Sprites/brihhhhhhhkz.png" id="2_5d6if"]
[ext_resource type="Texture2D" uid="uid://stba1h61bw5x" path="res://Sprites/untitled.png" id="2_snf1h"]
[ext_resource type="Texture2D" uid="uid://dfhc6e7ihhwpv" path="res://Sprites/untitled5.png" id="3_j67ws"]
[ext_resource type="AudioStream" uid="uid://dhd47je6000pc" path="res://Soundtrack/Pokemon Blue_Red - Pokemon Tower.mp3" id="5_h2suf"]

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o278h")
icone1 = ExtResource("2_snf1h")
icone2 = ExtResource("3_j67ws")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 658.0
offset_bottom = 365.0
texture = ExtResource("2_5d6if")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="OverButton" type="Button" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 179.0
offset_right = 421.0
offset_bottom = 210.0
text = "Load"
metadata/_edit_lock_ = true

[node name="return" type="Button" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 219.0
offset_right = 421.0
offset_bottom = 250.0
text = "Return"
metadata/_edit_lock_ = true

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 261.0
offset_right = 419.0
offset_bottom = 292.0
text = "Exit
"
metadata/_edit_lock_ = true

[node name="semsom" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 562.0
offset_top = 289.0
offset_right = 637.0
offset_bottom = 357.0
ignore_texture_size = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h2suf")

[connection signal="pressed" from="OverButton" to="." method="_on_over_button_pressed"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="semsom" to="." method="_on_texture_button_pressed"]
